Fixed overlap with sidebar and schedule + toggleDayView button position

--- a/src/css/skema.css
+++ b/src/css/skema.css
@@ -2,11 +2,12 @@
 .scheduleContainer{
     position: relative;
     background-color: white;
-    left: 10%;
+    left: 100px;
     width: 85%;
     height: 80%;
     margin-top: 2%;
     margin-bottom: 1.5%;
+    margin-left: 4%;
     border-radius: 10px;
     filter: drop-shadow(0px 0px 3px rgba(0,0,0,0.5));
 }
@@ -124,7 +125,7 @@
 
 .scheduleContainerHeader {
     display: grid;
-    grid-template-columns: 90% 10%;
+    grid-template-columns: auto 140px;
     height: 70px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -145,7 +146,7 @@
     color: white;
     position: relative;
     top: 55%;
-    left: 55%;
+    left: calc(50% + 70px);
     transform: translate(-50%, -50%);
 }
 
